# arduino_sound

./: .clangd  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  barduino  c_sound.ino  example.csv  note.h  parse.c  scuffed_arduino.h  test.abc  uarduino
ard-r-sound/: Cargo.toml
ard-r-sound-base/: Cargo.toml
ard-r-sound-base/src/: lib.rs
ard-r-sound-embedded/: Cargo.toml
ard-r-sound-embedded/src/: main.rs  peripherals.rs  periphs.rs  print_wrappers.rs  timer_duration.rs
ard-r-sound-macros/: Cargo.toml
ard-r-sound-macros/src/: proc_macros.rs
ard-r-sound/src/: abc.pest  abc.rs  args.rs  codegen.rs  lib.rs  main.rs  parse_tree.rs  parser.rs  player.rs
c_src/: notes.md
c_src/ard_sound/: ard_sound.ino  clangd_arduino.h
c_src/desktop_player/: player.c
c_src/generator/: README.md  codegen.md  parse.c
c_src/include/: note.h
misc/: arduino_sound.fzz
misc/example_abcs/: aa.abc  kick.abc  lengths.abc  lengths2.abc  mary.abc  pitches.abc  scale_long.abc  test.abc  test2.abc  test3.abc
misc/wiring/: arduino_sound.fzz
sample_audio/: test.abc
scripts/: build_arduino.sh  desktop_compile_commands.sh  merge_compile_commands.sh  upload_arduino.sh
src/: abc.pest  abc.rs  args.rs  codegen.rs  main.rs  parse_tree.rs  parser.rs  player.rs
src/ard_sound/: ard_sound.ino  clangd_arduino.h
src/desktop_player/: player.c  player.h  player_test.c
src/generator/: README.md  parse.c
src/include/: note.c  note.h  note_math.h
